V0.0.4 (2016-xx-xx):
====================

* New features:
  * ParsedAtomFilterMatchAction: Forward data to specific handlers
    when rules match.
  * VolatileLogarithmicBackoffEventHistory: Added unique EventId
  * Pass event source reference to event handlers to allow query/change
    of source parameters when handling the event.
* Bugfixes:
  * Packaging: unowned directory after purge, see
    https://bugs.debian.org/cgi-bin/bugreport.cgi?bug=832347
  * EventGenerationMatchAction: wrong method name, class field access


V0.0.3 (2016-07-21):
====================

* Backport of changes from Debian ITP process review, see
  https://bugs.debian.org/cgi-bin/bugreport.cgi?bug=813096
* Handle rollover from one logfile to the next more graceful.
* New features:
  * Added support for multiple parallel timescales in component
    trigger timing, e.g. real-time and forensic-time.
  * Added MissingMatchPathValueDetector to detect when data values
    were not reported for an extended period of time.
  * Added VolatileLogarithmicBackoffEventHistory to keep data
    of limited number of events in memory for automated processing.
  * AMinerRemoteControl: Added "--ExecFile" parameter to execute
    commands from file, "--StringResponse" for direct output.
* Bugfixes:
  * debian/postinst: disable service start when not already enabled
    using standard methods debian/rules and debian/postinst.


V0.0.2 (2016-05-12):
====================

* Added remote control support, command line tool for sending
  commands.
* Added AnalysisContext as registry for analysis components and
  access point for remote control.
* Added component to write events to syslog (read component documentation
  for CAVEATs)
* Package structure fixes from Debian mentoring procedure
* Bugfixes:
  * ModuloTimeMatchRule: time object path was ignored on error
  * Indent-formatting repaired, single-line mode added


V0.0.1 (2016-04-07):
====================

* Bugfixes
* Minor feature improvements (options)